--- a/Cadastro/index.html
+++ b/Cadastro/index.html
@@ -46,7 +46,7 @@
                     <input type="text" id="nome" data-index="new" class="modal-field" placeholder="Nome do Cliente"
                         required>
                     <input type="email" id="email" class="modal-field" placeholder="e-mail do Cliente" required>
-                    <input type="tel" id="fone" name="fone" class="modal-field" required pattern="[0-9]{2} [0-9]{5}-[0-9]{4}" placeholder="99 99999-9999">
+                    <input type="text" id="celular" class="modal-field" placeholder="Celular do Cliente" required>
                     <input type="text" id="cidade" class="modal-field" placeholder="Cidade do Cliente" required>
                 </form>
 
